--- a/SuggestionAppUI/wwwroot/css/site.css
+++ b/SuggestionAppUI/wwwroot/css/site.css
@@ -228,12 +228,13 @@ a:hover, btn-link:hover{
     color: #39BAD8;
 }
 
-.suggestion-entry-text{
+.suggestion-entry-text {
     display: flex;
     flex-direction: column;
     padding: 10px;
     padding-left: 20px;
     background-color: #FFFFFF;
+    word-wrap: break-word;
 }
 
 .suggestion-entry-text-title{
@@ -440,13 +441,14 @@ a:hover, btn-link:hover{
     padding-bottom: 10px;
 }
 
-.suggestion-detail-text{
-    display:flex;
+.suggestion-detail-text {
+    display: flex;
     flex-direction: column;
     padding-left: 27px;
     padding-right: 10px;
     padding-top: 0;
     padding-bottom: 10px;
+    word-wrap: break-word;
 }
 
 .suggestion-detail-suggestion{
@@ -657,6 +659,75 @@ a:hover, btn-link:hover{
     .suggestion-entry-voted,
     .suggestion-entry-not-voted{
         min-height: 100px;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .search-box{
+        --bs-gutter-x: inherit;
+        margin-top: 10px;
+    }
+
+    .nav-links{
+        justify-content: center;
+    }
+
+    .login-link{
+        flex: 1;
+        padding-left: 0;
+    }
+
+    .categories,
+    .statuses{
+        margin: 0;
+        margin-top: 10px;
+        padding: 0.375rem;
+        padding: 0.75rem;
+    }
+
+    .suggestion-container{
+        margin-bottom: 1rem;
+    }
+
+    .create-form,
+    .detail-form{
+        margin: 0;
+        margin-bottom: 1rem;
+    }
+
+    .form-layout{
+        padding: 1rem;
+    }
+
+    .submission{
+        margin: 0;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .suggestion-results{
+        padding: 0;
+        margin-top: 0;
+    }
+
+    .admin-details{
+        margin-top: 0;
+    }
+
+    .suggestion-detail-status-section{
+        padding: 0.5rem;
+    }
+
+    .suggestion-detail-suggestion{
+        font-size: 1rem;
+    }
+
+    .suggestion-detail-text {
+        padding-left: 12px;
+    }
+
+    .suggestion-entry-text-category{
+        padding-top: 0.5rem;
     }
 }
 
